--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
-
 {
-  "name": "react-native-bubbles-react-bridge",
+  "name": "@the-bubbles-company/bubbles-react-native-bridge",
   "version": "1.0.0",
-  "description": "",
+  "description": "React Native bridge for Bubbles",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "react-native"
-  ],
+  "keywords": ["react-native"],
   "author": "",
   "license": "",
+  "devDependencies": {
+    "react-native": "^0.46.4",
+    "react-native-windows": "0.46.0-rc.0"
+  },
   "peerDependencies": {
-    "react-native": "^0.41.2",
-    "react-native-windows": "0.41.0-rc.1"
-
+    "react-native": "^0.46.4",
+    "react-native-windows": "0.46.0-rc.0"
   }
 }
