--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "react-native": "^0.46.4",
-    "react-native-windows": "0.46.0-rc.0"
+    "react-native": "^0.46.4"
   },
   "peerDependencies": {
     "react-native": "^0.46.4",
